Mon Jan 28 13:29:41 2002  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (is_defined): defined?(Foo::Baz) should check constants
	  only, no methods.

	* eval.c (is_defined): should not dump core on defined?(a::b)
	  where a is not a class nor a module.

Fri Jan 25 17:48:43 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (solaris): add '-shared' only for GNU ld.

Fri Jan 25 17:16:23 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_include_module): detect cyclic module inclusion.

Fri Jan 25 02:17:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): should check time only if BOTH
	  WAIT_SELECT and WAIT_TIME.

Thu Jan 24 05:42:01 2002  Koji Arai  <jca02266@nifty.ne.jp>

	* string.c (rb_str_split_m): no need to consider KANJI
	characters, if the length of separator is 1 (byte)

Wed Jan 23 13:27:44 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_yield_0): restore source file/line after yield.

Mon Jan 21 08:25:30 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (ruby_stop): should not trace error handler.

	* signal.c (install_sighandler): do not install sighandler unless
	  the old value is SIG_DFL.

	* io.c (io_write): should not raise exception on O_NONBLOCK io.

	* dir.c (dir_set_pos): seek should return dir, pos= should not.

Fri Jan 18 10:26:33 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* error.c (rb_sys_fail): replace INT2FIX() by INT2NUM() since
	  errno value may not fit in Fixnum size on Hurd.

	* error.c (set_syserr): ditto.

Fri Jan 18 02:27:48 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (dir_s_glob): returns nil if block given.

	* io.c (rb_io_each_byte): should return self.

	* io.c (rb_io_close_m): close check added.

	* dir.c (dir_seek): should return pos.

Fri Jan 18 01:21:53 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>


	* parse.y (fixpos): orig may be (NODE*)1, which should not be
	  dereferenced.
